--- a/phantomgames/UserInterfaces/Base.lproj/Main.storyboard
+++ b/phantomgames/UserInterfaces/Base.lproj/Main.storyboard
@@ -4,8 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -34,7 +32,7 @@
                     <connections>
                         <segue destination="LQ5-Vn-8K3" kind="relationship" relationship="viewControllers" id="FPw-O2-E2a"/>
                         <segue destination="B8m-HG-5oh" kind="relationship" relationship="viewControllers" id="Idk-M7-Qjc"/>
-                        <segue destination="0b0-LF-SlO" kind="relationship" relationship="viewControllers" id="Rba-ce-er8"/>
+                        <segue destination="3pj-i1-aCh" kind="relationship" relationship="viewControllers" id="Bgy-nW-Gwl"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FaZ-fj-5AU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -102,25 +100,6 @@
             </objects>
             <point key="canvasLocation" x="1495" y="563"/>
         </scene>
-        <!--Account-->
-        <scene sceneID="zMo-Gx-Z7X">
-            <objects>
-                <viewController title="Account" id="0b0-LF-SlO" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="IGt-Nh-VTf">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="p7z-oJ-zNR"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="1b4-JW-LpE"/>
-                    <connections>
-                        <segue destination="GTl-GT-zcK" kind="show" id="8AJ-q6-csz"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Eu1-Ka-ssf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2813" y="396"/>
-        </scene>
         <!--AccountScreen-->
         <scene sceneID="RgV-yG-iIH">
             <objects>
@@ -141,12 +120,28 @@
             </objects>
             <point key="canvasLocation" x="1494" y="1028"/>
         </scene>
+        <!--Accounts-->
+        <scene sceneID="kgX-Wa-VC1">
+            <objects>
+                <navigationController title="Accounts" automaticallyAdjustsScrollViewInsets="NO" id="3pj-i1-aCh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="fVS-E1-EY0"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gga-2q-aoj">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="GTl-GT-zcK" kind="relationship" relationship="rootViewController" id="E1o-od-ivX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L1g-2s-LZJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2700" y="591.54929577464793"/>
+        </scene>
     </scenes>
     <resources>
         <image name="house" catalog="system" width="128" height="104"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
