--- a/phantomgames/Accounts/CustomCells/FavoriteCustomTableViewCell.xib
+++ b/phantomgames/Accounts/CustomCells/FavoriteCustomTableViewCell.xib
@@ -17,15 +17,14 @@
                 <rect key="frame" x="0.0" y="0.0" width="421" height="46"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="gameTitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8vd-so-9gY">
-                        <rect key="frame" x="30" y="7" width="83" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="gameTitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8vd-so-9gY">
+                        <rect key="frame" x="15" y="7" width="74" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gri-X2-I5H">
-                        <rect key="frame" x="353" y="5.6666666666666679" width="48" height="35"/>
+                        <rect key="frame" x="358" y="5.6666666666666679" width="48" height="35"/>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain" image="trash.fill" catalog="system">
                             <color key="baseForegroundColor" red="0.32549020649999999" green="0.34901961679999999" blue="0.86666667460000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -35,7 +34,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RO2-r0-Dt6">
-                        <rect key="frame" x="242" y="5.6666666666666679" width="67" height="35"/>
+                        <rect key="frame" x="256" y="5.6666666666666679" width="67" height="35"/>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="filled" title="game">
                             <color key="baseBackgroundColor" red="0.32549020649999999" green="0.34901961679999999" blue="0.86666667460000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -46,8 +45,10 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="gri-X2-I5H" firstAttribute="leading" secondItem="RO2-r0-Dt6" secondAttribute="trailing" constant="44" id="6oc-2Z-MmO"/>
-                    <constraint firstAttribute="trailing" secondItem="gri-X2-I5H" secondAttribute="trailing" constant="20" id="Z5a-Zi-CN6"/>
+                    <constraint firstItem="gri-X2-I5H" firstAttribute="leading" secondItem="RO2-r0-Dt6" secondAttribute="trailing" constant="35" id="6oc-2Z-MmO"/>
+                    <constraint firstItem="8vd-so-9gY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="A3z-k0-Seb"/>
+                    <constraint firstItem="8vd-so-9gY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="PMF-WP-Yv1"/>
+                    <constraint firstAttribute="trailing" secondItem="gri-X2-I5H" secondAttribute="trailing" constant="15" id="Z5a-Zi-CN6"/>
                     <constraint firstItem="gri-X2-I5H" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="n7s-Sk-dHb"/>
                     <constraint firstItem="gri-X2-I5H" firstAttribute="baseline" secondItem="RO2-r0-Dt6" secondAttribute="baseline" id="x83-s3-UpG"/>
                 </constraints>
